<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_background"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    >
    <TextView
        android:id="@+id/textViewSerialNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/textView_item_padding"
        android:text="@string/number_text_recycler"
        android:textColor="@color/titleColor"
        android:textSize="@dimen/textView_item_size" />
    <!-- app:drawableStartCompat="@drawable/delivery_svgrepo_com" -->


    <TextView
        android:id="@+id/textViewManufacturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/textView_item_padding"
        android:text="@string/type_text_recycler"
        android:textColor="@color/titleColor"
        android:textSize="@dimen/textView_item_size" />
    <!-- app:drawableStartCompat="@drawable/coffee_bean_filled_roast_brew_svgrepo_com"-->


    <TextView
        android:id="@+id/textViewRelativeReading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/textView_item_padding"
        android:text="@string/battery_status"
        android:textColor="@color/titleColor"
        android:textSize="@dimen/textView_item_size" />


    <TextView
        android:id="@+id/textViewAbsoluteReading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/textView_item_padding"
        android:text="@string/info_relative_reading"
        android:textColor="@color/titleColor"
        android:textSize="@dimen/textView_item_size" />


    <TextView
        android:id="@+id/textViewBatteryStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/textView_item_padding"
        android:text="@string/info_absolute_reading"
        android:textColor="@color/titleColor"
        android:textSize="@dimen/textView_item_size" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/textView_item_padding"
        android:text="@string/info_location"
        android:textColor="@color/titleColor"
        android:textSize="@dimen/textView_item_size" />


</LinearLayout>